# PSP-FlappyBird-Raylib

./: CMakeLists.txt
include/: bird.h  fruit.h  sceneStart.h  scenes.h  vector2.h
src/: main.c
